--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "jquery": "^3.3.1",
     "parcel-bundler": "^1.5.1",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
