--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "three": "^0.87.1"
   },
   "devDependencies": {
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "less": "^2.7.3"
   }
 }
